# magit

./: .gitignore  Cargo.toml  example.github.toml  readme.md
github-derive/: Cargo.toml
github-derive/src/: incoming.rs  lib.rs  rest_api.rs  string_enum.rs
github-derive/src/rest_api/: parse.rs  request.rs  response.rs
github-derive/src/string_enum/: case.rs  parse.rs
gitty-hub/: Cargo.toml
gitty-hub/src/: api.rs  lib.rs  utils.rs
gitty-hub/src/api/: rest.rs  webhooks.rs
gitty-hub/src/api/rest/: actions.rs  octocat.rs
gitty-hub/src/api/rest/actions/: cancel_workflow.rs  download_run_log.rs  list_runs.rs  rerun_workflow.rs
gitty-hub/src/api/rest/issue/: assign_issue.rs  create_comment.rs  create_issue.rs  delete_comment.rs  get_comment.rs  get_issue.rs  list_issue_comments.rs  list_repo_issues.rs  update_comment.rs  update_issue.rs
gitty-hub/src/api/rest/pull_request/: check_merged.rs  get_pull_request.rs  list_pull_request_commits.rs  list_pull_request_files.rs  list_pull_requests.rs  merge.rs  update.rs
gitty-hub/src/api/rest/repository/: get_repository.rs  list_org_repositories.rs
gitty-hub/src/api/webhooks/: check_run.rs  check_suite.rs  commit_comment.rs  common.rs  create.rs  delete.rs  installation.rs  issue.rs  issue_comment.rs  milestone.rs  pull.rs  pull_review.rs  pull_review_comment.rs  push.rs  release.rs  star.rs  status.rs  watch.rs
gitty-hub/src/api/webhooks/common/: enums.rs  structs.rs
gitty-hub/test_json/: issue.json  milestone.json  real_check_run.json  real_pull.json  real_push.json  status.json
gitty-hub/test_json/rest/: assign_issue.json  get_issue.json  get_pull_request.json  list_comments.json  list_pull_request_files.json
src/: api.rs  cmd_request.rs  cmds.rs  foo.rs  from_data.rs  lib.rs  main.rs  response.rs  routes.rs  strfmt.rs  tests.rs
src/api/: check_run.rs  check_suite.rs  checks.rs  commit_comment.rs  common.rs  create.rs  delete.rs  installation.rs  issue.rs  issue_comment.rs  milestone.rs  pull.rs  pull_review.rs  pull_review_comment.rs  push.rs  release.rs  rest.rs  star.rs  status.rs  watch.rs  webhooks.rs
src/api/common/: enums.rs  structs.rs
src/api/rest/: issue.rs  octocat.rs  pull_request.rs  repository.rs
src/api/rest/actions/: download_job_log.rs  download_run_log.rs  list_runs.rs  rerun_workflow.rs
src/api/rest/issue/: assign_issue.rs  create_comment.rs  create_issue.rs  delete_comment.rs  get_comment.rs  get_issue.rs  list_issue_comments.rs  list_repo_issues.rs  update_comment.rs  update_issue.rs
src/api/rest/pull_request/: check_merged.rs  get_pull_request.rs  list_pull_request_commits.rs  list_pull_request_files.rs  list_pull_requests.rs  merge.rs  update.rs
src/api/rest/repository/: get_repository.rs  list_org_repositories.rs
src/api/webhooks/: check_run.rs  check_suite.rs  commit_comment.rs  common.rs  create.rs  delete.rs  installation.rs  issue.rs  issue_comment.rs  milestone.rs  pull.rs  pull_review.rs  pull_review_comment.rs  push.rs  release.rs  star.rs  status.rs  watch.rs
src/api/webhooks/common/: enums.rs  structs.rs
src/cmds/: repository.rs
test_json/: commit_comment.json  installation.json  issue_comment.json  star.json
test_json/rest/: get_repo.json  list_issues.json  list_org_repos.json  list_pull_requests.json  list_runs.json  merge_pull_request.json  update_pull_request.json
tests/: routes.rs  str_fmt.rs
