[package]
name = "magit"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dirs = "3.0.2"
hmac = "0.11.0"
octocrab = "0.9.0"
serde = { version = "1.0.126", features = ["derive"] }
sha-1 = "0.9.6"
sha2 = "0.9.5"
url = "2.2.2"
serde_json = "1.0.64"

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk"
features = ["default"]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"

[dependencies.ruma]
version = "0.1.0"
features = ["client-reqwest", "client-api-c"]

[dependencies.tokio]
version = "1.6.0"
features = ["macros", "rt-multi-thread", "sync"]
