[package]
name = "magit"
version = "0.1.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Stand alone Matrix Github bot"
repository = "https://github.com/DevinR528/magit"
keywords = ["matrix", "chat", "github", "bot"]
categories = ["development-tools"]
readme = "readme.md"
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dirs = "3.0.2"
hmac = "0.11.0"
octocrab = "0.9.0"
serde = { version = "1.0.126", features = ["derive"] }
sha-1 = "0.9.6"
sha2 = "0.9.5"
url = "2.2.2"
serde_json = "1.0.64"
thiserror = "1.0.24"
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
reqwest = "0.11.3"
github-derive = { path = "./github-derive", version = "0.1.0" }
indexmap = "1.6.2"

# TODO: REMOVE
serde_path_to_error = "0.1"

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk"
features = ["default"]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
rev = "bf9de1d39e0b33c0172f89f98a43e266e9ae5bd7"

[dependencies.ruma]
version = "0.1.0"
features = ["client-api-c"]

[dependencies.tokio]
version = "1.6.0"
features = ["macros", "rt-multi-thread", "sync"]

[workspace]
members = ["github-derive"]
