[package]
name = "magit"
version = "0.1.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Stand alone Matrix Github bot"
repository = "https://github.com/DevinR528/magit"
keywords = ["matrix", "chat", "github", "bot"]
categories = ["development-tools"]
readme = "readme.md"
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dirs = "3.0.2"
hmac = "0.11.0"
octocrab = "0.9.0"
serde = { version = "1.0.126", features = ["derive"] }
sha-1 = "0.9.6"
sha2 = "0.9.5"
url = "2.2.2"
serde_json = "1.0.64"
thiserror = "1.0.24"
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
tokio-stream = "0.1.6"
isahc = "1.3.1"
async-stream = "0.3.0"
futures-core = "0.3.8"
assign = "1.1.1"

# TODO: REMOVE
serde_path_to_error = "0.1"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
rev = "bf9de1d39e0b33c0172f89f98a43e266e9ae5bd7"

[dependencies.ruma]
version = "0.1.0"
features = ["client-api-c", "client-isahc"]

[dependencies.tokio]
version = "1.6.0"
features = ["macros", "rt-multi-thread", "sync"]
