[package]
name = "gitty-hub"
version = "0.1.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Github REST and webhooks api"
repository = "https://github.com/DevinR528/magit"
keywords = ["api", "github", "hooks", "rest"]
categories = ["api-bindings", "web-programming"]
readme = "readme.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github-derive = { path = "../github-derive", version = "0.1.0" }
serde = { version = "1.0.126", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
url = { version = "2.2.2", features = ["serde"] }
async-trait = "0.1.50"
thiserror = "1.0.24"
js_int = "0.2.1"
reqwest = "0.11.4"
# maybe REMOVE
serde_path_to_error = "0.1"
serde_json = "1.0.64"
percent-encoding = "2.1.0"

[dev-dependencies]
tokio = { version = "1.7.1", features = ["macros", "rt"] }
